--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -25,6 +25,7 @@
 @using Sunduk.PWA.Components.TimeCalc
 @using Sunduk.PWA.Dialogs
 @using Sunduk.PWA.Infrastructure
+@using Sunduk.PWA.Infrastructure.Time
 @using Sunduk.PWA.Infrastructure.Templates
 @using Sunduk.PWA.Infrastructure.Sequences
 @using Sunduk.PWA.Infrastructure.Sequences.Base
