--- a/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
@@ -1,5 +1,4 @@
-﻿@using Sunduk.PWA.Infrastructure.Tools.Turning.Base
-<MudGrid Spacing=1>
+﻿<MudGrid Spacing=1>
     <MudItem xs="12" md="4">
         <MudSelect Label="Тип" T="SequenceType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnSequenceChanged">
             <MudSelectItem Value="@SequenceType.General">Общие</MudSelectItem>
@@ -8,6 +7,7 @@
                 <MudSelectItem Value="@SequenceType.Facing">Обработка торца</MudSelectItem>
                 <MudSelectItem Value="@SequenceType.ExternalTurning">Наружное точение</MudSelectItem>
                 <MudSelectItem Value="@SequenceType.Grooving">Обработка канавок и отрезка</MudSelectItem>
+                <MudSelectItem Value="@SequenceType.Burnishing">Накатка</MudSelectItem>
             }
             <MudSelectItem Value="@SequenceType.Drilling">Сверление</MudSelectItem>
             <MudSelectItem Value="@SequenceType.Threading">Нарезание резьбы</MudSelectItem>
@@ -528,7 +528,7 @@
 
         //Канавочные
         case SequenceType.Grooving:
-            <MudItem xs="4">
+            <MudItem xs="12" md="4">
                 <MudSelect Label="Переход" T="TurningGroovingSequences" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="GroovingSequence">
                     <MudSelectItem Value="@(TurningGroovingSequences.Cutting)">Отрезка</MudSelectItem>
                     <MudSelectItem Value="@(TurningGroovingSequences.RoughGrooving)">Канавка черновая</MudSelectItem>
@@ -537,7 +537,7 @@
             </MudItem>
             @if (GroovingSequence is TurningGroovingSequences.Grooving or TurningGroovingSequences.RoughGrooving && GrooveType is CuttingType.Radial)
             {
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
                         @foreach (var tool in Tools.Where(x => x is GroovingExternalTool || x is GroovingInternalTool))
                         {
@@ -548,7 +548,7 @@
             }
             else if (GroovingSequence is TurningGroovingSequences.Cutting && GrooveType is CuttingType.Radial)
             {
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
                         @foreach (var tool in Tools.Where(x => x is GroovingExternalTool))
                         {
@@ -559,7 +559,7 @@
             }
             @if (GrooveType is CuttingType.Face)
             {
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
                         @foreach (var tool in Tools.Where(x => x is GroovingFaceTool))
                         {
@@ -570,52 +570,52 @@
             }
             @if (GroovingSequence is TurningGroovingSequences.Grooving or TurningGroovingSequences.RoughGrooving)
             {
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudSelect Label="Тип" T="CuttingType" Value="GrooveType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnGrooveCuttingTypeChanged">
                         <MudSelectItem Value="@(CuttingType.Radial)">Радиальная</MudSelectItem>
                         <MudSelectItem Value="@(CuttingType.Face)">Торцевая</MudSelectItem>
                     </MudSelect>
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Начальный диаметр" @bind-Value="_GroovingExternalDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Конечный диаметр" @bind-Value="_GroovingInternalDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
                 @if(GrooveType is CuttingType.Face)
                 {
-                    <MudItem xs="3">
+                    <MudItem xs="12" md="3">
                         <MudTextField Label="Начальная точка" @bind-Value="_GroovingStartPoint" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                     </MudItem>
                 }
                 else
                 {
-                    <MudItem xs="3">
+                    <MudItem xs="12" md="3">
                         <MudTextField Label="Ширина" @bind-Value="_GroovingWidth" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                     </MudItem>
                 }
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudTextField Label="Конечная точка" @bind-Value="_GroovingCuttingPoint" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudTextField Label="Шаг" @bind-Value="_GroovingStepOver" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudTextField Label="Припуск" @bind-Value="_GroovingProfStockAllow" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudTextField Label="Притупление" @bind-Value="_OuterGroovingCornerBlunt" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudSelect Label="Тип притупления" T="Blunt" Variant="Variant.Filled" @bind-Value="OuterGroovingBluntType" Margin="Margin.Dense">
                         <MudSelectItem Value="@(Blunt.Radius)">Радиус</MudSelectItem>
                         <MudSelectItem Value="@(Blunt.SimpleChamfer)">Фаска</MudSelectItem>
                     </MudSelect>
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudTextField Label="Галтель" @bind-Value="_InnerGroovingCornerBlunt" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
+                <MudItem xs="12" md="3">
                     <MudSelect Label="Тип галтели" T="Blunt" Variant="Variant.Filled" @bind-Value="InnerGroovingBluntType" Margin="Margin.Dense">
                         <MudSelectItem Value="@(Blunt.Radius)">Радиус</MudSelectItem>
                         <MudSelectItem Value="@(Blunt.SimpleChamfer)">Фаска</MudSelectItem>
@@ -625,22 +625,22 @@
             }
             @if (GroovingSequence == TurningGroovingSequences.Cutting)
             {
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Начальный диаметр" @bind-Value="_CuttingExternalDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Конечный диаметр" @bind-Value="_CuttingInternalDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Конечная точка" @bind-Value="_CuttingPoint" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="Шаг" @bind-Value="_CuttingStepOver" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudTextField Label="@BluntLabel(CuttingBluntType)" @bind-Value="_CuttingCornerBlunt" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" @onfocusin="@(() => _calcCuttingChamferDiameter = true)" />
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="12" md="4">
                     <MudSelect Label="Тип" T="Blunt" Variant="Variant.Filled" @bind-Value="CuttingBluntType" Margin="Margin.Dense">
                         <MudSelectItem Value="@(Blunt.SimpleChamfer)">Простая фаска</MudSelectItem>
                         <MudSelectItem Value="@(Blunt.Radius)">Радиус</MudSelectItem>
@@ -663,7 +663,26 @@
             }
             break;
         
-
+        // накатка
+        case SequenceType.Burnishing:
+            <MudItem xs="12" md="4">
+                <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
+                    @foreach (var tool in Tools.Where(x => x is TurningBurnishingTool))
+                    {
+                        <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                    }
+                </MudSelect>
+            </MudItem>
+            <MudItem xs="12" md="4">
+                <MudTextField Label="Диаметр" @bind-Value="_BurnishingDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
+            </MudItem>
+            <MudItem xs="12" md="6">
+                <MudTextField Label="Начальная точка" @bind-Value="_BurnishingStart" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
+            </MudItem>
+            <MudItem xs="12" md="6">
+                <MudTextField Label="Конечная точка" @bind-Value="_BurnishingEnd" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
+            </MudItem>
+            break;
         default:
             break;
     }
@@ -1115,7 +1134,18 @@
 
     private bool ExternalGrooving => GroovingExternalDiameter > GroovingInternalDiameter;
 
-    
+
+    // накатка
+    private CuttingType BurnishingType { get; set; }
+
+    private string _BurnishingDiameter { get; set; }
+    private double BurnishingDiameter => _BurnishingDiameter.GetDouble();
+
+    private string _BurnishingStart { get; set; }
+    private double BurnishingStart => _BurnishingStart.GetDouble(numberOption: Util.GetNumberOption.Any);
+
+    private string _BurnishingEnd { get; set; }
+    private double BurnishingEnd => _BurnishingEnd.GetDouble(numberOption: Util.GetNumberOption.Any);
 
     /// <summary>
     /// Тут сразу формируется переход, текст которого выводится в пример. Уже созданный тут переход сабмитится при нажатии на кнопку.
@@ -1488,6 +1518,16 @@
                     return CurrentSequence.Operation;
                 }
 
+            }
+            if (Type == SequenceType.Burnishing)
+            {
+                CurrentSequence = new TurningBurnishingSequence(
+                    Machine,
+                    Tool as TurningBurnishingTool, 
+                    BurnishingDiameter,
+                    BurnishingStart,
+                    BurnishingEnd);
+                return CurrentSequence.Operation;
             }
             return string.Empty;
         }
