--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -88,6 +88,8 @@ https://github.com/dece1ver/Sunduk
             "Расчет неполных дуг с касательной начальной точкой."}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 14), new DateTime(2022, 8, 18), new string[] {
             "Добавил в базу знаний описание пользовательских циклов на Victor."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 4, 0), new DateTime(2022, 9, 06), new string[] {
+            "Расчет времени токарной обработки."}));
         Info.Reverse();
     }
 
